FreeST/test/Programs/InvalidTests/Typing/invalidParams1/invalidParams1.fst
-- It should have 2 params but it only has one
fun : Int -> Bool
fun x y = True
